Fix title letter spacing.

--- a/assets/scss/partials/_type.scss
+++ b/assets/scss/partials/_type.scss
@@ -154,6 +154,7 @@ h6 {
     a {
         color: $colorUltraLight;
         font-weight: 400;
+        letter-spacing: 0;
         text-decoration: none;
     }
 }
